# phoenix-pocx

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md
.claude/: settings.local.json
.github/workflows/: android-build-test.yml  android-release.yml  ci.yml  desktop-build-test.yml  ios-build-test.yml  release.yml  security.yml  staple-notarization.yml
desktop/wallet/: .gitignore  main.js  package-lock.json  package.json  preload.js  update-service.js
desktop/wallet/scripts/: build.js
docs/: IOS-HANDOFF.md  MIGRATION-PLAN.md  REVIEW-GUIDE.md  pools-dns-setup.md  wallet-compartments-redesign.md
docs/plans/: 2026-05-05-pool-discovery-dns-sd-design.md  2026-05-05-pool-discovery-dns-sd.md
handbook/: BASED-ON.md  README.md  SCREENSHOTS-TODO.md  build.ps1  metadata.yaml  style.tex
handbook/chapters/: ch01-about.md  ch02-introducing.md  ch03-installing.md  ch04-first-launch.md  ch05-creating-wallet.md  ch06-tour.md  ch07-receiving.md  ch08-sending.md  ch09-history.md  ch10-contacts.md  ch11-backup.md  ch12-settings.md  ch13-pocx-mining.md  ch14-hardware.md  ch15-mining-wizard.md  ch16-plotting.md  ch17-gpu-plotting.md  ch18-managing-plots.md  ch19-forging-assignments.md  ch20-mining-dashboard.md  ch21-multi-chain.md  ch22-benchmarking.md  ch23-android.md  ch24-aggregator.md  ch25-external-node.md  ch25b-remote-node.md  ch26-troubleshooting.md  ch27-faq.md  ch28-glossary.md  ch29-help.md  front-copyright.md  part2.md  part3.md  part4.md  part5.md
web-wallet/: angular.json  eslint.config.mjs  package-lock.json  package.json
web-wallet/src/: _breakpoints.scss  index.html  styles.scss
web-wallet/src-tauri/: Cargo.toml  app.manifest  app.rc  build.rs  tauri.conf.json
web-wallet/src-tauri/android-template/: AndroidManifest.xml  build.gradle.kts  data_extraction_rules.xml
web-wallet/src-tauri/capabilities/: android.json  default.json  desktop.json
web-wallet/src-tauri/linux/: phoenix-pocx-miner.desktop
web-wallet/src-tauri/macos/Phoenix PoCX Miner.app/Contents/: Info.plist
web-wallet/src-tauri/macos/Phoenix PoCX Miner.app/Contents/MacOS/: phoenix-pocx-miner
web-wallet/src-tauri/nsis/: hooks.nsi
web-wallet/src-tauri/plugins/tauri-plugin-foreground-service/: Cargo.toml  build.rs
web-wallet/src-tauri/plugins/tauri-plugin-foreground-service/android/: build.gradle.kts
web-wallet/src-tauri/plugins/tauri-plugin-foreground-service/android/src/main/: AndroidManifest.xml
web-wallet/src-tauri/plugins/tauri-plugin-foreground-service/android/src/main/java/org/pocx/phoenix/foregroundservice/: ForegroundServicePlugin.kt  MiningForegroundService.kt  StopServiceReceiver.kt
web-wallet/src-tauri/plugins/tauri-plugin-foreground-service/permissions/: default.toml
web-wallet/src-tauri/plugins/tauri-plugin-foreground-service/src/: lib.rs  mobile.rs
web-wallet/src-tauri/plugins/tauri-plugin-storage-permission/: Cargo.toml  build.rs
web-wallet/src-tauri/plugins/tauri-plugin-storage-permission/android/: build.gradle.kts
web-wallet/src-tauri/plugins/tauri-plugin-storage-permission/android/src/main/java/org/pocx/phoenix/storagepermission/: StoragePermissionPlugin.kt
web-wallet/src-tauri/plugins/tauri-plugin-storage-permission/permissions/: default.toml
web-wallet/src-tauri/plugins/tauri-plugin-storage-permission/src/: lib.rs  mobile.rs
web-wallet/src-tauri/src/: lib.rs  logging.rs  main.rs  update.rs
web-wallet/src-tauri/src/aggregator/: callback.rs  commands.rs  mod.rs  state.rs
web-wallet/src-tauri/src/btcx_wallet/: assignments.rs  commands.rs  config.rs  descriptors.rs  descstore.rs  manager.rs  migrate.rs  mod.rs  psbt.rs  roundtrip_25th_word_test.rs  state.rs
web-wallet/src-tauri/src/mining/: callback.rs  commands.rs  devices.rs  drives.rs  mod.rs  plotter.rs  state.rs
web-wallet/src-tauri/src/node/: commands.rs  config.rs  downloader.rs  extractor.rs  hasher.rs  manager.rs  mod.rs  rpc.rs  state.rs
web-wallet/src-tauri/src/pools/: cache.rs  commands.rs  merger.rs  mod.rs  resolver.rs  types.rs
web-wallet/src-tauri/src/time/: commands.rs  mod.rs
web-wallet/src-tauri/tests/: btcx_wallet_regtest.rs
web-wallet/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
web-wallet/src/app/aggregator/: aggregator.routes.ts
web-wallet/src/app/aggregator/models/: aggregator.models.ts
web-wallet/src/app/aggregator/services/: aggregator.service.ts
web-wallet/src/app/bitcoin/services/: blockchain-state.service.ts  index.ts  pocx-notification.service.ts  transaction-state.service.ts
web-wallet/src/app/bitcoin/utils/: address-validation.spec.ts  address-validation.ts  descriptor-checksum.ts  descriptor-validation.spec.ts  descriptor-validation.ts  payment-uri.ts  pocx-op-return.ts
web-wallet/src/app/core/auth/: cookie-auth.service.ts  index.ts
web-wallet/src/app/core/backend/: backend-router.service.ts  core-wallet-backend.ts  electrum-wallet-backend.ts  wallet-backend.model.ts
web-wallet/src/app/core/guards/: auth.guard.ts  index.ts  mining-only.guard.ts  mobile-wallet.guard.ts  node-setup.guard.ts  not-remote.guard.ts
web-wallet/src/app/core/i18n/: i18n.pipe.ts  i18n.service.ts  index.ts  languages.ts  paginator-intl.ts
web-wallet/src/app/core/services/: app-mode.service.ts  app-update.service.ts  btcx-wallet.service.spec.ts  btcx-wallet.service.ts  clock-drift.service.ts  electron.service.ts  electrum-status.service.ts  index.ts  platform.service.ts  viewport.service.ts
web-wallet/src/app/mining/: MINING_DASHBOARD_PERF.md  mining.routes.ts
web-wallet/src/app/mining/models/: index.ts  (+1 more)
web-wallet/src/app/node/: index.ts  node.routes.ts
web-wallet/src/app/shared/: index.ts
web-wallet/src/app/store/: index.ts
web-wallet/src/assets/locales/: TRANSLATION-NOTES.md  bg.json  ca.json  check-keys.js  cs.json  de-de.json  el.json  en.json  es-es.json  fi.json  fr.json  gl.json  hi.json  hr.json  id.json  it.json  ja.json  lt.json  nl.json  pl.json  pt-br.json  remove-keys.js  ro.json  ru.json  sk.json  sr.json  tr.json  uk.json  zh-cn.json
web-wallet/src/styles/: _theme.scss  _utilities.scss
(+159 files in other folders)
