[package]
name = "phoenix-pocx"
version = "2.0.0-rc8"
description = "Phoenix PoCX Wallet - Bitcoin-PoCX Desktop Wallet"
authors = ["The Proof of Capacity Consortium <development@pocx.io>"]
license = "GPL-3.0"
repository = "https://github.com/PoC-Consortium/phoenix-pocx"
edition = "2021"
default-run = "phoenix-pocx"

[lib]
name = "phoenix_pocx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# macOS miner launcher - native binary to avoid Rosetta prompts
[[bin]]
name = "phoenix-pocx-miner"
path = "src/bin/miner_launcher.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
log = "0.4"
log4rs = "1"
anyhow = "1"
hex = "0.4"
url = "2"

# System information for drive/device detection
sysinfo = "0.32"
num_cpus = "1.16"

# Async runtime for mining operations
tokio = { version = "1", features = ["full"] }

# PoCX mining libraries
pocx_miner = "1.0.0-rc.8"
pocx_plotter = { version = "1.0.0-rc.8", features = ["opencl"] }
pocx_address = "1.0.0-rc.8"
pocx_aggregator = "1.0.0-rc.8"

# OpenCL for GPU detection (dynamic loading - no build-time SDK required)
opencl3 = { version = "0.10", features = ["dynamic"] }

# SHA256 hashing for node binary verification
sha2 = "0.10"

# Archive extraction for node binaries
zip = "2"
flate2 = "1"
tar = "0.4"

# Async stream utilities for download progress
futures-util = "0.3"

# HTTP client for GitHub API and downloads
# Use rustls on Android (no OpenSSL cross-compilation needed), native-tls on desktop
[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }

# Unix-specific dependencies (Linux + macOS) for filesystem stat fallback
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-specific dependencies for elevation and restart
[target.'cfg(windows)'.dependencies]
is_elevated = "0.1"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
] }

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = "24"
tauri-plugin-storage-permission = { path = "plugins/tauri-plugin-storage-permission" }
tauri-plugin-foreground-service = { path = "plugins/tauri-plugin-foreground-service" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

# Optimize dependencies even in dev builds for acceptable performance
# This is critical for CPU-intensive crypto/hashing code (Shabal256 SIMD)
[profile.dev.package.pocx_hashlib]
opt-level = 3

[profile.dev.package.pocx_plotter]
opt-level = 3

[profile.dev.package.pocx_miner]
opt-level = 3
