[package]
name = "phoenix-pocx"
version = "2.1.1"
description = "Phoenix PoCX Wallet - Bitcoin-PoCX Desktop Wallet"
authors = ["The Proof of Capacity Consortium <development@pocx.io>"]
license = "GPL-3.0"
repository = "https://github.com/PoC-Consortium/phoenix-pocx"
edition = "2021"
default-run = "phoenix-pocx"

[lib]
name = "phoenix_pocx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Wallet-only launch flavor (the future iOS / wallet-only-Android app):
# on Android, `get_launch_mode` reports "wallet-mobile" instead of "mobile",
# so the frontend shows only the nodeless wallet (no mining, no node).
# Desktop builds keep both modes and pick at runtime via `--wallet-only`.
wallet-only = []

# macOS miner launcher - native binary to avoid Rosetta prompts
[[bin]]
name = "phoenix-pocx-miner"
path = "src/bin/miner_launcher.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
log = "0.4"
log4rs = "1"
anyhow = "1"
hex = "0.4"

# System information for drive/device detection
sysinfo = "0.32"
num_cpus = "1.16"

# Async runtime for mining operations
tokio = { version = "1", features = ["full"] }

# PoCX mining libraries
pocx_miner = "1.0.5"
pocx_plotter_v2 = { version = "1.0.5", features = ["opencl"] }
pocx_address = "1.0.5"
pocx_aggregator = "1.0.5"


# Nodeless BTCX wallet stack (shared btcx crates)
params-btcx = { git = "https://github.com/PoC-Consortium/btcx", rev = "f1e216897bae629a251f4bd83f95bb71b4ffb06e" }
keys-btcx = { git = "https://github.com/PoC-Consortium/btcx", rev = "f1e216897bae629a251f4bd83f95bb71b4ffb06e" }
seedstore = { git = "https://github.com/PoC-Consortium/btcx", rev = "f1e216897bae629a251f4bd83f95bb71b4ffb06e" }
electrum-btcx = { git = "https://github.com/PoC-Consortium/btcx", rev = "f1e216897bae629a251f4bd83f95bb71b4ffb06e" }
wallet-btcx = { git = "https://github.com/PoC-Consortium/btcx", rev = "f1e216897bae629a251f4bd83f95bb71b4ffb06e" }
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
bdk_wallet = { version = "2", features = ["rusqlite"] }
# bech32 with custom HRPs (pocx/tpocx/rpocx) — same version the btcx crates use
bech32 = "0.11"
# Descriptor-at-rest wraps for imported wallets (btcx_wallet::descstore) —
# the same primitives and parameters seedstore uses for seed.mnemonic.
scrypt = "0.11"
chacha20poly1305 = "0.10"
rand = "0.8"

# SHA256 hashing for node binary verification
sha2 = "0.10"

# Archive extraction for node binaries
zip = "2"
flate2 = "1"
tar = "0.4"

# Async stream utilities for download progress
futures-util = "0.3"

# HTTP client for GitHub API and downloads
# Use rustls on Android (no OpenSSL cross-compilation needed), native-tls on desktop
[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }

# Unix-specific dependencies (Linux + macOS) for filesystem stat fallback
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-specific dependencies for elevation and restart
[target.'cfg(windows)'.dependencies]
is_elevated = "0.1"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
] }

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = "24"
tauri-plugin-storage-permission = { path = "plugins/tauri-plugin-storage-permission" }
tauri-plugin-foreground-service = { path = "plugins/tauri-plugin-foreground-service" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"

# tauri-plugin-sql (sqlx) links libsqlite3-sys 0.30.x while bdk_chain 0.23
# asks for rusqlite 0.31 (libsqlite3-sys 0.28) — two versions of a `links =
# "sqlite3"` crate cannot coexist in one build graph. The vendored bdk_chain
# is byte-identical to crates.io 0.23.3 except its rusqlite requirement is
# bumped to 0.32.1, which uses exactly the libsqlite3-sys 0.30.1 that sqlx
# already ships.
[patch.crates-io]
bdk_chain = { path = "vendor/bdk_chain" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

# Optimize dependencies even in dev builds for acceptable performance
# This is critical for CPU-intensive crypto/hashing code (Shabal256 SIMD)
[profile.dev.package.pocx_hashlib]
opt-level = 3

[profile.dev.package.pocx_plotter_v2]
opt-level = 3

[profile.dev.package.pocx_miner]
opt-level = 3
