[package]
name = "tauri-plugin-foreground-service"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin for Android Foreground Service with wake lock"
links = "tauri-plugin-foreground-service"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
log = "0.4"
